# AUMC

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/booking/: models.py
src/booking/api/: filters.py  serializers.py  urls.py  views.py
src/booking/migrations/: 0001_initial.py
src/main/: permissions.py  settings.py  urls.py
